server/cloud-infra/k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: crs-api
spec:
  selector:
    app: crs-api
  ports:
    - name: http
      port: 80
      targetPort: 5000
