server/cloud-infra/k8s/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: crs-web
spec:
  selector:
    app: crs-web
  ports:
    - name: http
      port: 80
      targetPort: 80
